--- a/index.ipynb
+++ b/index.ipynb
@@ -299,16 +299,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f81c40e1390>"
+       "<folium.map.Marker at 0x7f61c4722cc0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
